--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
-        "outDir": "dist"
+        "outDir": "dist",
+        "removeComments": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
