--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/Farlox/kittensjs#readme",
     "devDependencies": {
-        "@types/jquery": "^3.3.31"
+        "@types/jquery": "^3.3.31",
+        "typescript": "^3.7.2"
     }
 }
